<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    tools:context=".View.GezdimFilterCategory"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/linearcategorymenu">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/l_tfen_se_n_z"
            android:textSize="60sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginBottom="20dp"/>


        <Button
            android:id="@+id/button2"
            android:layout_width="285dp"
            android:layout_height="50dp"
            android:text="@string/tarihi_yerler"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />
        <Button
            android:id="@+id/button3"
            android:layout_width="285dp"
            android:layout_height="50dp"
            android:text="@string/do_al_g_zellikler"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="285dp"
            android:layout_height="50dp"
            android:text="@string/plaj_ve_koylar"
            android:textColorLink="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />
        <Button
            android:id="@+id/button5"
            android:layout_width="285dp"
            android:layout_height="50dp"
            android:text="@string/antik_kentler"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />
        <Button
            android:id="@+id/button6"
            android:layout_width="285dp"
            android:layout_height="50dp"
            android:text="@string/m_zeler"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />
        <Button
            android:id="@+id/button7"
            android:layout_width="285dp"
            android:layout_height="50dp"
            android:text="@string/avm"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />
        <Button
            android:id="@+id/button8"
            android:layout_width="285dp"
            android:layout_height="50dp"
            android:text="@string/cafeler"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearcategorymenu"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="425dp"
            android:layout_height="5dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/uzuncubuk"
            app:srcCompat="@android:drawable/screen_background_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="68dp"
                android:layout_height="52dp"
                android:contentDescription="@string/gezdim"
                app:srcCompat="@drawable/mor"
                android:paddingVertical="5dp"
                android:layout_weight="0.45"/>


            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="7dp"
                android:layout_height="52dp"
                android:contentDescription="@string/kısacubuk"
                app:srcCompat="@android:drawable/screen_background_dark" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="68dp"
                android:layout_height="52dp"
                android:contentDescription="@string/gördüm"
                app:srcCompat="@drawable/gordum"
                android:paddingVertical="5dp"
                android:layout_weight="0.45"/>


        </LinearLayout>

    </LinearLayout>




</RelativeLayout>