<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".View.SearchActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/relativelayout_searchactivity_top">


        <ImageButton
            android:id="@+id/pmButton"
            android:layout_width="75dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/dmbutton" />

        <ImageButton
            android:id="@+id/profilButton"
            android:layout_width="75dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/profile"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"/>


    </RelativeLayout>



    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="335dp"
        android:layout_height="57dp"
        android:layout_below="@+id/relativelayout_searchactivity_top"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/search" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:layout_below="@+id/relativelayout_searchactivity_top"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearcategorycity"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">


        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="425dp"
            android:layout_height="5dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/uzuncubuk"
            app:srcCompat="@android:drawable/screen_background_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/imageButton77"
                android:layout_width="68dp"
                android:layout_height="52dp"
                android:layout_weight="0.45"
                android:contentDescription="@string/gezdim"
                android:onClick="goToGezdim"
                android:paddingVertical="5dp"
                app:srcCompat="@drawable/mor" />


            <ImageView
                android:id="@+id/imageView99"
                android:layout_width="7dp"
                android:layout_height="52dp"
                android:contentDescription="@string/kısacubuk"
                app:srcCompat="@android:drawable/screen_background_dark" />

            <ImageButton
                android:id="@+id/imageButton88"
                android:layout_width="68dp"
                android:layout_height="52dp"
                android:contentDescription="@string/gördüm"
                app:srcCompat="@drawable/gordum"
                android:paddingVertical="5dp"
                android:layout_weight="0.45"/>


        </LinearLayout>
    </LinearLayout>



</RelativeLayout>